--- a/production.conf
+++ b/production.conf
@@ -24,8 +24,8 @@ server {
 
     server_tokens off;
 
-    ssl_certificate /etc/letsencrypt/live/dont-blindly-copy-past.face-palm/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/dont-blindly-copy-past.face-palm/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/jonah-fullstack.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/jonah-fullstack.com/privkey.pem;
 
     ssl_buffer_size 8k;
 
@@ -67,8 +67,8 @@ server {
 
     server_tokens off;
 
-    ssl_certificate /etc/letsencrypt/live/dont-blindly-copy-past.face-palm/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/dont-blindly-copy-past.face-palm/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/jonah-fullstack.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/jonah-fullstack.com/privkey.pem;
 
     ssl_buffer_size 8k;
 
@@ -87,5 +87,5 @@ server {
     ssl_stapling_verify on;
     resolver 8.8.8.8;
 
-    return 301 https://www.dont-blindly-copy-past.face-palm$request_uri;
+    return 301 https://www.jonah-fullstack.com$request_uri;
 }
